# AREUHEN

./: README.md
AcousticEffect/: CMakeLists.Files.txt  CMakeLists.txt  main.cpp
Common/: CommonDefinitions.h  TAcousticPressure.cpp  TAcousticPressure.h  TCylindersSuperpositionApproximatedEDD.h  TEnergyDistributionDensity.h  TFFT.cpp  TFFT.h  TFilonIntegrator.h  TNNAP.h  TRootApp.h
LibTorchTraining/: Trainable.cpp  Trainable.h
NNAPTrainer/: CMakeLists.Files.txt  CMakeLists.txt  TNNAPDataset.cpp  TNNAPDataset.h  main.cpp  nnap-checkpoint.pt  nnap-checkpoint_1M.pt
